# efka

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  DEPLOYMENT_ISSUES.md  README.md  README_CN.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  CLAUDE.md  main.py  requirements.txt  wework_server.py
backend/agents/: __init__.py  kb_admin_agent.py  kb_qa_agent.py  (+2 more)
deploy/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.wework  nginx.conf
docs/: CHANNELS.md  DEPLOYMENT.md  MIGRATION_V3.md  PROGRESS_V3.md  Phase1-验收报告.md  Phase2-验收报告.md  Phase3-验收报告.md  Phase4-验收报告.md  TODO_V3.md  logging_improvements.md  并发支持技术方案.md
frontend/: .env.example  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vite.user.config.js
frontend-employee/: package-lock.json  package.json
knowledge_base/: README.md
scripts/: DEPLOY_REDIS_IMPROVEMENTS.md  deploy.sh  start.sh  start_frontend.sh  start_production.sh  start_v3.sh  stop.sh  test_session_resume.py  test_session_sharing.py  verify_phase1.py  verify_phase2.py  verify_phase3.py
skills/: CLAUDE.md  batch_notification.md  smart_convert.py
tests/: TEST_REPORT.md  test_channel_adapters.py  test_channel_config.py  test_channel_router.py  test_concurrent_summary_update.py  test_routing_session_manager.py  test_session_model.py
wework-mcp/: .env.example  .gitignore  README.md  pyproject.toml
wework-mcp/scripts/: test_connection.py
wework-mcp/src/wework_mcp/: __init__.py  config.py  server.py  token_manager.py  weework_client.py
(+102 files in other folders)
